--- a/world/templates/post_update.html
+++ b/world/templates/post_update.html
@@ -9,8 +9,8 @@
 
 
 <main class="flex-shrink-0 main-bg base">
-       <div class="bact-img">
-              <div class="form-post">
+       <div class="bact-upt">
+              <div class="form-upt">
                      <div class="card bg-dark text-white">
                             <h1 class="post-title">Update your Post</h1>
                             <div class="createpost">
@@ -55,6 +55,7 @@
               </div>
     </div>
 </main>
+
 {% endif %}
           
           
