--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -1,59 +1,54 @@
 {% extends 'base.html' %}
-{% block title %} My Posts {% endblock%}
 
+{% block title %} Add Post {% endblock%}
 {% block content %}
 
 {% if user.is_authenticated %}
 {% if user.profile.user %}
-
-<main class="flex-shrink-0 main-bg base">
-       <div class="bact-img">
-              <div class="form-post">
-                     <div class="card bg-dark text-white">
-                            <h1 class="post-title">Create your Post</h1>
-                            <div class="createpost">
-                                   <div class="mb-3">
-                                          <form method="POST" enctype="multipart/form-data">
-                                                 {% csrf_token %}
-                                                 {{ form.media }}
-                                                 {{ form.as_p }}
-                                                 <div class="form-btn">
-                                                        <button class="btn btn-create-post">Post</button>
-                                                 </div>
-                                          </form>
-                                   </div>
-                            </div>
-                     </div>
-              </div>
-              <!---Function script to display restriction to Post Author-->
-           <script>
-              var name = "{{ user.id }}";
-              document.getElementById("identifier").value = name;
-            </script>
-                 {% else %}
-                 <div class="not-allowed">
-                     <div class="not-allowed-box">
-                       <div class="not-loggedin">
-                         <p>Please, create a profile first.</p>
-                         <p><a href="{% url 'create_profile_page' %}">Create profile</a></p>
-                       </div>
-                     </div>
+<div class="bact-img">
+    <div class="form-post">
+        <div class="add-edit-post">
+            <h2 class="add-edit-post">Create Post</h2>
+            <div class="form-group add-edit-post-form">
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.media}}
+                    {{ form.as_p }}
+                    <div class="btn-login">
+                        <button type="submit" class="btn btn-create-post">Post</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script>
+        var name = "{{ user.id }}";
+        document.getElementById("identifier").value = name;
+      </script>
+           {% else %}
+           <div class="not-allowed">
+               <div class="not-allowed-box">
+                 <div class="not-loggedin">
+                   <p>Please, create a profile first.</p>
+                   <p><a href="{% url 'create_profile_page' %}">Create profile</a></p>
                  </div>
-                 {% endif %}
-                 {% else %}
-             
-                 <!-- If the user ended up in this page without being logged in, a message will be displayed -->
-                 <div class="not-allowed">
-                     <div class="not-allowed-box">
-                            <div class="not-loggedin">
-                                   <p>Login first to be able to add a post</p>
-                                   <p><a href="{% url 'login' %}">Login Here</a></p>
-                            </div>
-                     </div>
-                 </div>
-       </div>
-</main>
+               </div>
+           </div>
+           {% endif %}
+           {% else %}
+       
+           <!-- If the user ended up in this page without being logged in, a message will be displayed -->
+           <div class="not-allowed">
+               <div class="not-allowed-box">
+                      <div class="not-loggedin">
+                             <p>Login first to be able to add a post</p>
+                             <p><a href="{% url 'login' %}">Login Here</a></p>
+                      </div>
+               </div>
+           </div>
+   </div>
+</div>
 {% endif %}
-             
-             
+
+
 {% endblock %}
