--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -7,8 +7,8 @@
 {% if user.profile.user %}
 <div class="bact-img">
     <div class="form-post">
-        <div class="add-edit-post">
-            <h2 class="add-edit-post">Create Post</h2>
+        <div class="add-dit-post">
+            <h2 class="add-edit-post-title">Create Post</h2>
             <div class="form-group add-edit-post-form">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
