fixing layout from category form

--- a/members_signup/templates/registration/create_user_page.html
+++ b/members_signup/templates/registration/create_user_page.html
@@ -5,7 +5,7 @@
 
 {% if user.is_authenticated %}
 <div class="main-profile">
-       <section class="vh-90 gradient-custom">
+       <section class="gradient-custom">
               <div class="profile-form">
                      <div class="row d-flex justify-content-center align-items-center h-100"
                             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
