--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -70,9 +70,11 @@
 
                   </div>
 
-                  <hr />
+                  <div class="date-container">
+                    <hr />
 
-                  <p class="card-text text-muted h6">Created on {{ post.publish_date}}</p>
+                    <p class="card-text text-muted h6">Created on {{ post.publish_date}}</p>
+                  </div>
 
                 </div>
 
