--- a/members_signup/templates/registration/edit_profile.html
+++ b/members_signup/templates/registration/edit_profile.html
@@ -4,9 +4,9 @@
 {% block content %}
 
 
-<div class ="edit-section">
+<div class ="edit-background">
     <div class="form-edit-acc">
-        <div class="form-box bg-dark text-white">
+        <div class="form-box-edit bg-dark text-white">
             <h1 class="page-title"> Edit Profile Account</h1>
             <div class="mb-3">
                 <form method="POST">
