--- a/static/css/style.css
+++ b/static/css/style.css
@@ -830,15 +830,12 @@ transition:0.3s;
 
 }
 
-.form-box {
-    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3));
-    box-shadow: 7px 7px 60px #000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 327px;
+.form-box-edit {
+    margin-top: 12px;
+    width: 334px;
     padding: 50px 30px;
+    margin: auto;
+    margin-bottom: 9px;
 }
 
 .comment-title{
@@ -944,11 +941,13 @@ transition:0.3s;
 }
 
 /*Edit Page Profile*/
-.edit-section{
-    height:100%;
-    width:100%;
-    margin: 0 auto;
-    background-color: #212529!important;
+.edit-background{
+    position:relative;
+    height: 100vh;
+    width: 100%;
+    background: url('../img/ireland.jpg');
+    background-size: cover;
+    background-position: center center;
 }
 
 #id_profile_picture {
