fixing form create profile

--- a/members_signup/templates/registration/create_user_page.html
+++ b/members_signup/templates/registration/create_user_page.html
@@ -4,26 +4,23 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="main-profile">
-       <section class="gradient-custom">
-              <div class="profile-form">
-                     <div class="row d-flex justify-content-center align-items-center h-100"
-                            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                                   <div class="card bg-dark text-white">
-                                          <h3 class="text-profile"> Create Profile</h3>
-                                          <div class="mb-3">
-                                                 <form method="POST" enctype="multipart/form-data">
-                                                 {% csrf_token %}
-                                                 {{ form.as_p }}
-                                                 <button class="btn btn-secondary">Create Profile</button>
-                                                 </form>
-                                          </div>
-                                   </div>
-                            </div>
-                     </div>
-              </div>
-       </section>
-</div>
+<div class="edit-section">
+       <div class="form-edit">
+           <div class="card bg-dark text-white">
+               <h1 class="page-title"> Create Profile</h1>
+               <br /><br />
+               <div class="mb-3">
+                   <form method="POST" enctype="multipart/form-data">
+                       {% csrf_token %}
+                       {{ form.as_p }}
+                       <div class="form-btn">
+                           <button class="btn btn-edit">Create Profile</button>
+                       </div>
+                   </form>
+               </div>
+           </div>
+       </div>
+   </div>
 {% else %}
 <div class="not-allowed">
        <div class="not-loggedin">
