fixing bug when deploying on heroku

--- a/world/templates/category.html
+++ b/world/templates/category.html
@@ -17,7 +17,8 @@
                             {% if "placeholder" in post.header_img.url %}
 
                             <img class="card-img-top"
-                                src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                                src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
+                                alt="picture">
 
                             {% else %}
 
