validating forms to pass on pep 8

--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -29,12 +29,12 @@
       
                     <div class="form-outline form-white mb-4">
                       <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
-                      <label class="form-label" for="typeUsernameX">username</label>
+                      <label class="form-label" id="typeUsernameX">username</label>
                     </div>
       
                     <div class="form-outline form-white mb-4">
                       <input type="password" class="form-control" id="exampleInputPassword1" name="password">
-                      <label class="form-label" for="typePasswordX">Password</label>
+                      <label class="form-label" id="typePasswordX">Password</label>
                     </div>
                     <div class="btn-register">
                       <button class="btn btn-secondary btn-submit">Login</button>
