--- a/members_signup/templates/registration/password_changed.html
+++ b/members_signup/templates/registration/password_changed.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
-{% block title%} Password successfully updated{% endblock%}
 
+
+{% block title %} Password Updated {% endblock%}
 {% block content %}
-
-Your Password was successfully changed, Please login <a href="{% url 'login' %}">here</a>
-<br/><br/>
+<div class="login-password-main">
+    <div class="password-section">
+        <div class="success-box">
+            <div class="success-password">
+                <p>Your password was changed successfully!</p>
+                <p>Back to the <a href="{% url 'index' %}">Home Page</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
