--- a/static/css/style.css
+++ b/static/css/style.css
@@ -661,13 +661,20 @@ transition:0.3s;
 }
 /*Change password*/
 
-
+.login-password-main {
+    background: url('../img/ireland.jpg');
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    width: 100%;
+    height:100vh;
+}
 
 .forms-1 {
     padding: 1rem 25rem;
 }
 
-.form-box-2 {
+.success-box{
     padding: 1rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -900,6 +907,7 @@ transition:0.3s;
 
 .edit-section{
     position:relative;
+    height: 100vh;
     width: 100%;
     background: url('../img/ireland.jpg');
     background-size: cover;
