adding button to form password changed

--- a/members_signup/templates/registration/password_changed.html
+++ b/members_signup/templates/registration/password_changed.html
@@ -8,7 +8,8 @@
         <div class="success-box">
             <div class="success-password">
                 <p>Your password was changed successfully!</p>
-                <p>Back to the <a href="{% url 'index' %}">Home Page</a></p>
+                <p>Back to <a href="{% url 'index' %}" class="btn submit-comment btn-submit">Home
+                    Page</a></p>
             </div>
         </div>
     </div>
