fixing layout and adding extra button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1190,6 +1190,10 @@ and (orientation : portrait) {
         height: 113vh;
     
     }
+
+    .main-register {
+        height: 158vh;
+    }
 }
 
 
