--- a/world/templates/category.html
+++ b/world/templates/category.html
@@ -52,7 +52,8 @@
     <div class="not-allowed">
         <div class="not-loggedin">
             <p>This category has no posts.</p>
-            <p><a href="{% url 'post' %}">Add one</a></p>
+            <p><a href="{% url 'post' %}" class="btn submit-comment btn-submit">Add Post
+            </a></p>
      </div>
  </div>
  </div>
