--- a/world/templates/post_update.html
+++ b/world/templates/post_update.html
@@ -30,19 +30,21 @@
         <div class="not-allowed-box">
             <div class="not-loggedin">
                 <p>Please, create a profile first.</p>
-                <p><a href="{% url 'create_profile_page' %}">Create profile</a></p>
+                <p><a href="{% url 'create_profile_page' %}" class="btn submit-comment btn-submit">Create profile
+                </a></p>
             </div>
         </div>
     </div>
     {% endif %}
     {% else %}
        
-    <!-- If the user ended up in this page without being logged in, a message will be displayed -->
+    <!-- This message will be displayed if user is not logged in -->
     <div class="not-allowed">
         <div class="not-allowed-box">
                 <div class="not-loggedin">
-                        <p>Login first to be able to add a post</p>
-                        <p><a href="{% url 'login' %}">Login Here</a></p>
+                <p>Login first to be able to add a post</p>
+                <p><a href="{% url 'login' %}" class="btn submit-comment btn-submit">Login
+                    Page</a></p>
                 </div>
         </div>
     </div>
