--- a/world/templates/create_category.html
+++ b/world/templates/create_category.html
@@ -20,11 +20,12 @@
             </div>
 
             {% else %}
-            <!-- If the user try to use this page without being logged in, below message will be displayed -->
+            <!-- The below message will be displayed  if user is not logged in-->
             <div class="not-allowed">
                 <div class="not-loggedin">
                     <p>You need to login to be able to add a category</p>
-                    <p><a href="{% url 'login' %}">Login Here</a></p>
+                     <p><a href="{% url 'login' %}" class="btn submit-comment btn-submit">Login
+                        Page</a></p>
                 </div>
             </div>
             {% endif %}
